Home page wrap item fixed to justify start

--- a/frontend/src/components/OldHomePage/ShoeList.css
+++ b/frontend/src/components/OldHomePage/ShoeList.css
@@ -106,7 +106,7 @@ color: rgba(0,0,0,0.8);
     display: flex;
     justify-content: space-evenly;
     /* need to figure out how to have the products be evenly placed */
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 }
 
 .shoe-container{
@@ -114,13 +114,9 @@ color: rgba(0,0,0,0.8);
     background-color: white;
     border: 2px solid white;
     width:375px;
-    /* max-width:351px; */
     max-height: 430px;
     margin-right: 8.5px;
     margin-left: 1px;
-
-    /* might look better with images */
-    /* height: auto; */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 25px;
 }
